Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBooleanBoolObjField.quorum
class Main
    Boolean b
    action Main
        boolean bool
        b:SetValue(true)
        bool = cast(boolean, b)
        if bool = true
            output "passed"
        end
    end
end