Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBoolObjField.quorum
class Main
    Boolean b
    integer int
    action Main
        b:SetValue(true)
        int = cast(integer, b)
    end
end